--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -106,4 +106,185 @@
             </div>
         </section>
         <!-- banner__area-end -->
+
+
+             <!-- topsell__area-start -->
+        <section class="topsell__area-1 pt-15">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="section__head d-flex justify-content-between mb-10">
+                            <div class="section__title">
+                                <h5 class="st-titile-d">Top Deals Of The Day</h5>
+                            </div>
+                            <div class="offer-time">
+                                <span class="offer-title d-none d-sm-block">Hurry Up! Offer ends in:</span>
+                                <div class="countdown">
+                                    <div class="countdown-inner b-radius" data-countdown="" data-date="Mar 02 2022 20:20:22">
+                                        <ul class="text-center">
+                                            <li><span data-days="">36</span> Days</li>
+                                            <li><span data-hours="">8</span> Hours</li>
+                                            <li><span data-minutes="">16</span> Mins</li>
+                                            <li><span data-seconds="">54</span> Secs</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="product-bs-slider">
+                        <div class="product-slider swiper-container">
+                            <div class="swiper-wrapper">
+                                {% for product in products %}
+                                <div class="product__item swiper-slide">
+                                    <div class="product__thumb fix">
+                                        <div class="product-image w-img">
+                                            <a href="product-details.html">
+                                                <img src="{{product.featured_image}}" alt="product" style="height:242px;">
+                                            </a>
+                                        </div>
+                                        <div class="product__offer">
+                                        <span class="discount">{{product.discount}}%</span>
+                                        </div>
+                                        <div class="product-action">
+                                            <a href="#" class="icon-box icon-box-1 quick-view-btn" id="quick-view-btn" data-id="{{product.id}}" data-bs-toggle="modal" data-bs-target="#productModalId">
+                                                <i class="fal fa-eye"></i>
+                                                <i class="fal fa-eye"></i>
+                                            </a>
+                                            <a href="#" class="icon-box icon-box-1">
+                                                <i class="fal fa-heart"></i>
+                                                <i class="fal fa-heart"></i>
+                                            </a>
+                                            <a href="#" class="icon-box icon-box-1">
+                                                <i class="fal fa-layer-group"></i>
+                                                <i class="fal fa-layer-group"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="product__content">
+                                        <h6><a href="product-details.html">{{product.product_name|truncatewords:9}}</a></h6>
+                                        <div class="rating mb-5">
+                                            <ul>
+                                                <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                                <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                                <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                                <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                                <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            </ul>
+                                            <span>(01 review)</span>
+                                        </div>
+                                        <div class="price mb-10">
+                                            <span>{{product.price}} BDT</span>
+                                        </div>
+                                        <div class="progress mb-5">
+                                            <div class="progress-bar bg-danger" role="progressbar" style="width: 10%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <div class="progress-rate">
+                                            <span>Sold:{{product.available_quantity}}/{{product.total_quantity}}</span>
+                                        </div>
+                                    </div>
+                                    <div class="product__add-cart text-center">
+                                        <button type="button" class="cart-btn product-modal-sidebar-open-btn d-flex align-items-center justify-content-center w-100">
+                                        Add to Cart
+                                        </button>
+                                    </div>
+                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <!-- If we need navigation buttons -->
+                        <div class="bs-button bs-button-prev"><i class="fal fa-chevron-left"></i></div>
+                        <div class="bs-button bs-button-next"><i class="fal fa-chevron-right"></i></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- topsell__area-end -->
+
+        <!-- shop modal start -->
+        <div class="modal fade" id="productModalId" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered product__modal" role="document">
+                <div class="modal-content">
+                    <div class="product__modal-wrapper p-relative">
+                        <div class="product__modal-close p-absolute">
+                            <button data-bs-dismiss="modal"><i class="fal fa-times"></i></button>
+                        </div>
+                        <div class="product__modal-inner">
+                            <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                <div class="product__modal-box">
+                                    <div class="tab-content" id="modalTabContent">
+
+                                    </div>
+                                    <ul class="nav nav-tabs" id="modalTab" role="tablist">
+
+                                        </ul>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                <div class="product__modal-content">
+                                    <h4><a href="product-details.html" class="truncate-multiline" id="modal-product-name"></a></h4>
+                                    <div class="product__review d-sm-flex">
+                                        <div class="rating rating__shop mb-10 mr-30">
+                                        <ul>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                        </ul>
+                                        </div>
+                                        <div class="product__add-review mb-15">
+                                        <span>01 review</span>
+                                        </div>
+                                    </div>
+                                    <div class="product__price">
+                                        <span id="modal-product-price"></span>
+                                    </div>
+                                    <div class="product__modal-des mt-20 mb-15" id="modal-product-description">
+
+                                    </div>
+                                    <div class="product__stock mb-20">
+                                        <span class="mr-10" id="modal-product-available"></span>
+                                        <span class="modal-product-quantity"></span>
+                                    </div>
+                                    <div class="product__modal-form">
+                                        <form action="#">
+                                        <div class="pro-quan-area d-lg-flex align-items-center">
+                                            <div class="product-quantity mr-20 mb-25">
+                                                <div class="cart-plus-minus p-relative"><input type="text" value="1" /></div>
+                                            </div>
+                                            <div class="pro-cart-btn mb-25">
+                                                <button class="cart-btn" type="submit">Add to cart</button>
+                                            </div>
+                                        </div>
+                                        </form>
+                                    </div>
+                                    <div class="product__stock mb-30">
+                                        <ul>
+                                            <li><a href="#">
+                                                <span class="sku mr-10">SKU:</span>
+                                                <span id="modal-product-sku"></span></a>
+                                            </li>
+                                            <li><a href="#">
+                                                <span class="cat mr-10">Categories:</span>
+                                                <span id="modal-product-categories"></span></a>
+                                            </li>
+                                            <li><a href="#">
+                                                <span class="tag mr-10">Tags:</span>
+                                                <span id="modal-product-tags"></span></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- shop modal end -->
 {% endblock %}
