--- a/templates/account/password_reset_complete.html
+++ b/templates/account/password_reset_complete.html
@@ -9,7 +9,7 @@
         <h4 class="alert-heading">Password Reset Successful 🎉</h4>
         <p>Your password has been updated. You can now log in with your new password.</p>
         <hr>
-        <a href="{% url 'login' %}" class="btn btn-success">Login Now</a>
+        <a href="{% url 'register' %}" class="btn btn-success">Login Now</a>
       </div>
     </div>
   </div>
