--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -9,7 +9,7 @@
         <h4 class="alert-heading">Check your email</h4>
         <p>If an account exists with the email you entered, you will receive an email with reset instructions.</p>
         <hr>
-        <a href="{% url 'my_account' %}" class="btn btn-outline-primary">Back to Login</a>
+        <a href="{% url 'register' %}" class="btn btn-outline-primary">Back to Login</a>
       </div>
     </div>
   </div>
