--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -16,7 +16,7 @@
                                    <nav class="breadcrumb-trail breadcrumbs">
                                       <ul class="breadcrumb-menu">
                                          <li class="breadcrumb-trail">
-                                            <a href="{% url 'index' %}"><span>Home</span></a>
+                                            <a href="{% url 'home' %}"><span>Home</span></a>
                                          </li>
                                          <li class="trail-item">
                                             <span>My account</span>
