--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -38,7 +38,7 @@
                             <div class="header-inner-end text-md-end">
                                 <div class="ovic-menu-wrapper">
                                     <ul>
-                                        <li><a href="about.html">About Us</a></li>
+                                        <li><a href="about/">About Us</a></li>
                                         <li><a href="contact.html">Order Tracking</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li><a href="faq.html">FAQs</a></li>
@@ -57,7 +57,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                             <div class="header__info">
                                 <div class="logo">
-                                    <a href="{% url 'index' %}" class="logo-image"><img src=" {% static 'assets/img/logo/logo1.svg' %}" alt="logo"></a>
+                                    <a href="{% url 'home' %}" class="logo-image"><img src=" {% static 'assets/img/logo/logo1.svg' %}" alt="logo"></a>
                                 </div>
                             </div>
                         </div>
@@ -89,14 +89,25 @@
                         </div>
                         <div class="col-xl-4 col-lg-5 col-md-8 col-sm-8">
                             <div class="header-action">
-                                <div class="block-userlink">
-                                    <a class="icon-link" href="/account/register">
-                                    <i class="flaticon-user"></i>
-                                    <span class="text">
-                                    <span class="sub">Login </span>
-                                    My Account </span>
-                                    </a>
-                                </div>
+                                {% if user.is_authenticated %}
+                                        <div class="block-userlink">
+                                            <a class="icon-link" href="/account/profile/">
+                                            <i class="flaticon-user"></i>
+                                            <span class="text">
+                                            <span class="sub">My Profile </span>
+                                             {{ user.username|capfirst }} </span>
+                                            </a>
+                                        </div>
+                                {% else %}
+                                      <div class="block-userlink">
+                                            <a class="icon-link" href="/account/register">
+                                            <i class="flaticon-user"></i>
+                                            <span class="text">
+                                            <span class="sub">Login </span>
+                                               My Account </span>
+                                            </a>
+                                        </div>
+                                {% endif %}
                                 <div class="block-wishlist action">
                                     <a class="icon-link" href="wishlist.html">
                                     <i class="flaticon-heart"></i>
@@ -210,9 +221,9 @@
                             <nav>
                                 <ul>
                                     <li>
-                                        <a href="{% url 'index' %}" class="active">Home</a>
+                                        <a href="{% url 'home' %}" class="active">Home</a>
                                     </li>
-                                    <li><a href="about.html">About Us</a></li>
+                                    <li><a href="about">About Us</a></li>
                                     <li class="has-mega"><a href="shop.html">Shop <i class="far fa-angle-down"></i></a>
                                         <div class="mega-menu">
                                             <div class="container container-mega">
