--- a/templates/pages/product_detail.html
+++ b/templates/pages/product_detail.html
@@ -11,9 +11,9 @@
                         <div class="breadcrumb__wrapper">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                  <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
+                                  <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
                                   <li class="breadcrumb-item active" aria-current="page">
-                                      <a href="{% url 'index' %}">shop</a>
+                                      <a href="{% url 'home' %}">shop</a>
                                   </li>
                                 </ol>
                               </nav>
