updated product by category

--- a/templates/pages/product_detail.html
+++ b/templates/pages/product_detail.html
@@ -105,7 +105,7 @@
                                     </span>
                                     <span class="posted_in">
                                         <span class="title">Categories:</span>
-                                        <a href="#">{{product.categories}}</a>
+                                        <a href="#">{{product.categories.name}}</a>
 <!--                                        <a href="#">Tablets</a>-->
                                     </span>
                                     <span class="tagged_as">
