--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
       <link rel="stylesheet" href="{% static 'assets/flaticon/flaticon.css' %}">
       <link rel="stylesheet" href="{% static 'assets/css/font-awesome-pro.css' %}">
       <link rel="stylesheet" href="{% static 'assets/css/default.css' %}">
+       <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
       <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
    </head>
    <body>
@@ -148,7 +149,7 @@
 
       <!-- JS here -->
       <script src="{% static 'assets/js/vendor/jquery.js' %}"></script>
-      <script src="{% static 'assets/js/vendor/waypoints.js' %}"></script>
+      <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
       <script src="{% static 'assets/js/bootstrap-bundle.js' %}"></script>
       <script src="{% static 'assets/js/meanmenu.js' %}"></script>
       <script src="{% static 'assets/js/swiper-bundle.js' %}"></script>
